--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/.*",
             "dest": "/"
         }
-    ],
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    ]
 }
